--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
+    "jest": "^25.2.4",
     "nodemon": "^1.19.1",
     "pre-commit": "^1.2.2",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "supertest": "^4.0.2"
   },
   "pre-commit": [
     "lint"
